ALFAParser.cpp

// Generated from ALFA.g4 by ANTLR 4.7.1


#include "ALFAListener.h"

#include "ALFAParser.h"


using namespace antlrcpp;
using namespace antlr4;

ALFAParser::ALFAParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ALFAParser::~ALFAParser() {
  delete _interpreter;
}

std::string ALFAParser::getGrammarFileName() const {
  return "ALFA.g4";
}

const std::vector<std::string>& ALFAParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ALFAParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- TranslationunitContext ------------------------------------------------------------------

ALFAParser::TranslationunitContext::TranslationunitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ALFAParser::TranslationunitContext::EOF() {
  return getToken(ALFAParser::EOF, 0);
}

std::vector<ALFAParser::DeclarationseqContext *> ALFAParser::TranslationunitContext::declarationseq() {
  return getRuleContexts<ALFAParser::DeclarationseqContext>();
}

ALFAParser::DeclarationseqContext* ALFAParser::TranslationunitContext::declarationseq(size_t i) {
  return getRuleContext<ALFAParser::DeclarationseqContext>(i);
}


size_t ALFAParser::TranslationunitContext::getRuleIndex() const {
  return ALFAParser::RuleTranslationunit;
}

void ALFAParser::TranslationunitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALFAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTranslationunit(this);
}

void ALFAParser::TranslationunitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALFAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTranslationunit(this);
}

ALFAParser::TranslationunitContext* ALFAParser::translationunit() {
  TranslationunitContext *_localctx = _tracker.createInstance<TranslationunitContext>(_ctx, getState());
  enterRule(_localctx, 0, ALFAParser::RuleTranslationunit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(44);
      declarationseq();
      setState(47); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (((((_la - 16) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 16)) & ((1ULL << (ALFAParser::T__15 - 16))
      | (1ULL << (ALFAParser::T__16 - 16))
      | (1ULL << (ALFAParser::NEWLINE - 16))
      | (1ULL << (ALFAParser::NAMESPACE - 16))
      | (1ULL << (ALFAParser::POLICYSET - 16))
      | (1ULL << (ALFAParser::POLICY - 16))
      | (1ULL << (ALFAParser::PERMIT - 16))
      | (1ULL << (ALFAParser::DENY - 16))
      | (1ULL << (ALFAParser::TARGET - 16))
      | (1ULL << (ALFAParser::ONPERMIT - 16))
      | (1ULL << (ALFAParser::ONDENY - 16))
      | (1ULL << (ALFAParser::CONDITION - 16))
      | (1ULL << (ALFAParser::BAGFUNCTION - 16))
      | (1ULL << (ALFAParser::COMMENT - 16))
      | (1ULL << (ALFAParser::ATTRIBUTE - 16))
      | (1ULL << (ALFAParser::RIGHTPAREN - 16))
      | (1ULL << (ALFAParser::NOT - 16))
      | (1ULL << (ALFAParser::TARGETRESSOURCE - 16)))) != 0));
    setState(49);
    match(ALFAParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationseqContext ------------------------------------------------------------------

ALFAParser::DeclarationseqContext::DeclarationseqContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ALFAParser::DeclarationseqContext::NEWLINE() {
  return getTokens(ALFAParser::NEWLINE);
}

tree::TerminalNode* ALFAParser::DeclarationseqContext::NEWLINE(size_t i) {
  return getToken(ALFAParser::NEWLINE, i);
}

ALFAParser::NamespaceDefinitionContext* ALFAParser::DeclarationseqContext::namespaceDefinition() {
  return getRuleContext<ALFAParser::NamespaceDefinitionContext>(0);
}

tree::TerminalNode* ALFAParser::DeclarationseqContext::COMMENT() {
  return getToken(ALFAParser::COMMENT, 0);
}

ALFAParser::ImportDefinitionContext* ALFAParser::DeclarationseqContext::importDefinition() {
  return getRuleContext<ALFAParser::ImportDefinitionContext>(0);
}

ALFAParser::AttributeDefinitionContext* ALFAParser::DeclarationseqContext::attributeDefinition() {
  return getRuleContext<ALFAParser::AttributeDefinitionContext>(0);
}

ALFAParser::PolicysetDefinitionContext* ALFAParser::DeclarationseqContext::policysetDefinition() {
  return getRuleContext<ALFAParser::PolicysetDefinitionContext>(0);
}

ALFAParser::PolicyDefinitionContext* ALFAParser::DeclarationseqContext::policyDefinition() {
  return getRuleContext<ALFAParser::PolicyDefinitionContext>(0);
}

ALFAParser::ConditionDefinitionContext* ALFAParser::DeclarationseqContext::conditionDefinition() {
  return getRuleContext<ALFAParser::ConditionDefinitionContext>(0);
}

ALFAParser::TargetDefinitionContext* ALFAParser::DeclarationseqContext::targetDefinition() {
  return getRuleContext<ALFAParser::TargetDefinitionContext>(0);
}

ALFAParser::CombiningAlgorithmContext* ALFAParser::DeclarationseqContext::combiningAlgorithm() {
  return getRuleContext<ALFAParser::CombiningAlgorithmContext>(0);
}

ALFAParser::OnBlockContext* ALFAParser::DeclarationseqContext::onBlock() {
  return getRuleContext<ALFAParser::OnBlockContext>(0);
}

ALFAParser::PermitdenyContext* ALFAParser::DeclarationseqContext::permitdeny() {
  return getRuleContext<ALFAParser::PermitdenyContext>(0);
}

ALFAParser::BooleenExpressionContext* ALFAParser::DeclarationseqContext::booleenExpression() {
  return getRuleContext<ALFAParser::BooleenExpressionContext>(0);
}


size_t ALFAParser::DeclarationseqContext::getRuleIndex() const {
  return ALFAParser::RuleDeclarationseq;
}

void ALFAParser::DeclarationseqContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALFAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclarationseq(this);
}

void ALFAParser::DeclarationseqContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALFAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclarationseq(this);
}

ALFAParser::DeclarationseqContext* ALFAParser::declarationseq() {
  DeclarationseqContext *_localctx = _tracker.createInstance<DeclarationseqContext>(_ctx, getState());
  enterRule(_localctx, 2, ALFAParser::RuleDeclarationseq);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(70);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(54);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(51);
          match(ALFAParser::NEWLINE); 
        }
        setState(56);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
      }
      setState(57);
      match(ALFAParser::NEWLINE);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(58);
      namespaceDefinition();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(59);
      match(ALFAParser::COMMENT);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(60);
      importDefinition();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(61);
      attributeDefinition();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(62);
      policysetDefinition();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(63);
      policyDefinition();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(64);
      conditionDefinition();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(65);
      targetDefinition();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(66);
      combiningAlgorithm();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(67);
      onBlock();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(68);
      permitdeny();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(69);
      booleenExpression();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NamespaceDefinitionContext ------------------------------------------------------------------

ALFAParser::NamespaceDefinitionContext::NamespaceDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ALFAParser::NamespaceDefinitionContext::NAMESPACE() {
  return getToken(ALFAParser::NAMESPACE, 0);
}

tree::TerminalNode* ALFAParser::NamespaceDefinitionContext::RIGHTCBRACKET() {
  return getToken(ALFAParser::RIGHTCBRACKET, 0);
}

tree::TerminalNode* ALFAParser::NamespaceDefinitionContext::LEFTCBRACKET() {
  return getToken(ALFAParser::LEFTCBRACKET, 0);
}

tree::TerminalNode* ALFAParser::NamespaceDefinitionContext::WORD() {
  return getToken(ALFAParser::WORD, 0);
}

std::vector<tree::TerminalNode *> ALFAParser::NamespaceDefinitionContext::NEWLINE() {
  return getTokens(ALFAParser::NEWLINE);
}

tree::TerminalNode* ALFAParser::NamespaceDefinitionContext::NEWLINE(size_t i) {
  return getToken(ALFAParser::NEWLINE, i);
}

std::vector<ALFAParser::NamespaceDefinitionContext *> ALFAParser::NamespaceDefinitionContext::namespaceDefinition() {
  return getRuleContexts<ALFAParser::NamespaceDefinitionContext>();
}

ALFAParser::NamespaceDefinitionContext* ALFAParser::NamespaceDefinitionContext::namespaceDefinition(size_t i) {
  return getRuleContext<ALFAParser::NamespaceDefinitionContext>(i);
}

std::vector<tree::TerminalNode *> ALFAParser::NamespaceDefinitionContext::COMMENT() {
  return getTokens(ALFAParser::COMMENT);
}

tree::TerminalNode* ALFAParser::NamespaceDefinitionContext::COMMENT(size_t i) {
  return getToken(ALFAParser::COMMENT, i);
}

std::vector<ALFAParser::ImportDefinitionContext *> ALFAParser::NamespaceDefinitionContext::importDefinition() {
  return getRuleContexts<ALFAParser::ImportDefinitionContext>();
}

ALFAParser::ImportDefinitionContext* ALFAParser::NamespaceDefinitionContext::importDefinition(size_t i) {
  return getRuleContext<ALFAParser::ImportDefinitionContext>(i);
}

std::vector<ALFAParser::AttributeDefinitionContext *> ALFAParser::NamespaceDefinitionContext::attributeDefinition() {
  return getRuleContexts<ALFAParser::AttributeDefinitionContext>();
}

ALFAParser::AttributeDefinitionContext* ALFAParser::NamespaceDefinitionContext::attributeDefinition(size_t i) {
  return getRuleContext<ALFAParser::AttributeDefinitionContext>(i);
}

std::vector<ALFAParser::PolicysetDefinitionContext *> ALFAParser::NamespaceDefinitionContext::policysetDefinition() {
  return getRuleContexts<ALFAParser::PolicysetDefinitionContext>();
}

ALFAParser::PolicysetDefinitionContext* ALFAParser::NamespaceDefinitionContext::policysetDefinition(size_t i) {
  return getRuleContext<ALFAParser::PolicysetDefinitionContext>(i);
}

std::vector<ALFAParser::PolicyDefinitionContext *> ALFAParser::NamespaceDefinitionContext::policyDefinition() {
  return getRuleContexts<ALFAParser::PolicyDefinitionContext>();
}

ALFAParser::PolicyDefinitionContext* ALFAParser::NamespaceDefinitionContext::policyDefinition(size_t i) {
  return getRuleContext<ALFAParser::PolicyDefinitionContext>(i);
}

std::vector<ALFAParser::ConditionDefinitionContext *> ALFAParser::NamespaceDefinitionContext::conditionDefinition() {
  return getRuleContexts<ALFAParser::ConditionDefinitionContext>();
}

ALFAParser::ConditionDefinitionContext* ALFAParser::NamespaceDefinitionContext::conditionDefinition(size_t i) {
  return getRuleContext<ALFAParser::ConditionDefinitionContext>(i);
}

std::vector<ALFAParser::TargetDefinitionContext *> ALFAParser::NamespaceDefinitionContext::targetDefinition() {
  return getRuleContexts<ALFAParser::TargetDefinitionContext>();
}

ALFAParser::TargetDefinitionContext* ALFAParser::NamespaceDefinitionContext::targetDefinition(size_t i) {
  return getRuleContext<ALFAParser::TargetDefinitionContext>(i);
}

std::vector<ALFAParser::CombiningAlgorithmContext *> ALFAParser::NamespaceDefinitionContext::combiningAlgorithm() {
  return getRuleContexts<ALFAParser::CombiningAlgorithmContext>();
}

ALFAParser::CombiningAlgorithmContext* ALFAParser::NamespaceDefinitionContext::combiningAlgorithm(size_t i) {
  return getRuleContext<ALFAParser::CombiningAlgorithmContext>(i);
}

std::vector<ALFAParser::OnBlockContext *> ALFAParser::NamespaceDefinitionContext::onBlock() {
  return getRuleContexts<ALFAParser::OnBlockContext>();
}

ALFAParser::OnBlockContext* ALFAParser::NamespaceDefinitionContext::onBlock(size_t i) {
  return getRuleContext<ALFAParser::OnBlockContext>(i);
}

std::vector<ALFAParser::PermitdenyContext *> ALFAParser::NamespaceDefinitionContext::permitdeny() {
  return getRuleContexts<ALFAParser::PermitdenyContext>();
}

ALFAParser::PermitdenyContext* ALFAParser::NamespaceDefinitionContext::permitdeny(size_t i) {
  return getRuleContext<ALFAParser::PermitdenyContext>(i);
}

std::vector<ALFAParser::BooleenExpressionContext *> ALFAParser::NamespaceDefinitionContext::booleenExpression() {
  return getRuleContexts<ALFAParser::BooleenExpressionContext>();
}

ALFAParser::BooleenExpressionContext* ALFAParser::NamespaceDefinitionContext::booleenExpression(size_t i) {
  return getRuleContext<ALFAParser::BooleenExpressionContext>(i);
}


size_t ALFAParser::NamespaceDefinitionContext::getRuleIndex() const {
  return ALFAParser::RuleNamespaceDefinition;
}

void ALFAParser::NamespaceDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALFAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNamespaceDefinition(this);
}

void ALFAParser::NamespaceDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ALFAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNamespaceDefinition(this);
}

ALFAParser::NamespaceDefinitionContext* ALFAParser::namespaceDefinition() {
  NamespaceDefinitionContext *_localctx = _tracker.createInstance<NamespaceDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 4, ALFAParser::RuleNamespaceDefinition);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(75);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == ALFAParser::NEWLINE) {
      setState(72);
      match(ALFAParser::NEWLINE);
      setState(77);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(78);
    match(ALFAParser::NAMESPACE);
    setState(86);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ALFAParser::NEWLINE:
      case ALFAParser::RIGHTCBRACKET: {
        setState(82);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ALFAParser::NEWLINE) {
          setState(79);
          match(ALFAParser::NEWLINE);
          setState(84);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case ALFAParser::WORD: {
        setState(85);
        match(ALFAParser::WORD);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(88);
    match(ALFAParser::RIGHTCBRACKET);
    setState(117);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (((((_la - 16) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 16)) & ((1ULL << (ALFAParser::T__15 - 16))
      | (1ULL << (ALFAParser::T__16 - 16))
      | (1ULL << (ALFAParser::NEWLINE - 16))
      | (1ULL << (ALFAParser::NAMESPACE - 16))
      | (1ULL << (ALFAParser::POLICYSET - 16))
      | (1ULL << (ALFAParser::POLICY - 16))
      | (1ULL << (ALFAParser::PERMIT - 16))
      | (1ULL << (ALFAParser::DENY - 16))
      | (1ULL << (ALFAParser::TARGET - 16))
      | (1ULL << (ALFAParser::ONPERMIT - 16))
      | (1ULL << (ALFAParser::ONDENY - 16))
      | (1ULL << (ALFAParser::CONDITION - 16))
      | (1ULL << (ALFAParser::BAGFUNCTION - 16))
      | (1ULL << (ALFAParser::COMMENT - 16))
      | (1ULL << (ALFAParser::ATTRIBUTE - 16))
      | (1ULL << (ALFAParser::RIGHTPAREN - 16))
      | (1ULL << (ALFAParser::NOT - 16))
      | (1ULL << (ALFAParser::TARGETRESSOURCE - 16)))) != 0)) {
      setState(92);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(89);
          match(ALFAParser::NEWLINE); 
        }
        setState(94);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
      }
      setState(107);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
      case 1: {
        setState(95);
        namespaceDefinition();
        break;
      }

      case 2: {
        setState(96);
        match(ALFAParser::COMMENT);
        break;
      }

      case 3: {
        setState(97);
        importDefinition();
        break;
      }

      case 4: {
        setState(98);
        attributeDefinition();
        break;
      }

      case 5: {
        setState(99);
        policysetDefinition();
        break;
      }

      case 6: {
        setState(100);
        policyDefinition();
        break;
      }

      case 7: {
        setState(101);
        conditionDefinition();
        break;
      }

      case 8: {
        setState(102);
        targetDefinition();
        break;
      }

      case 9: {
        setState(103);
        combiningAlgorithm();
        break;
      }

      case 10: {
        setState(104);
        onBlock();
        break;
      }

      case 11: {
        setState(105);
        permitdeny();
        break;
      }

      case 12: {
        setState(106);
        booleenExpression();
        break;
      }

      }
      setState(112);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(109);
          match(ALFAParser::NEWLINE); 
        }
        setState(114);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
      }
      setState(119);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(120);
    match(ALFAParser::LEFTCBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PolicysetDefinitionContext ------------------------------------------------------------------

ALFAParser::PolicysetDefinitionContext::PolicysetDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ALFAParser::PolicysetDefinitionContext::POLICYSET() {
  return getToken(ALFAParser::POLICYSET, 0);
}

tree::TerminalNode* ALFAParser::PolicysetDefinitionContext::WORD() {
  return getToken(ALFAParser::WORD, 0);
}

tree::TerminalNode* ALFAParser::PolicysetDefinitionContext::RIGHTCBRACKET() {
  return getToken(ALFAParser::RIGHTCBRACKET, 0);
}

tree::TerminalNode* ALFAParser::PolicysetDefinitionContext::LEFTCBRACKET() {
  return getToken(ALFAParser::LEFTCBRACKET, 0);
}

std::vector<tree::TerminalNode *> ALFAParser::PolicysetDefinitionContext::NEWLINE() {
  return getTokens(ALFAParser::NEWLINE);
}

tree::TerminalNode* ALFAParser::PolicysetDefinitionContext::NEWLINE(size_t i) {
  return getToken(ALFAParser::NEWLINE, i);
}

tree::TerminalNode* ALFAParser::PolicysetDefinitionContext::ASSIGN() {
  return getToken(ALFAParser::ASSIGN, 0);
}

tree::TerminalNode* ALFAParser::PolicysetDefinitionContext::STRING() {
  return getToken(ALFAParser::STRING, 0);
}

std::vector<ALFAParser::PolicysetDefinitionContext *> ALFAParser::PolicysetDefinitionContext::policysetDefinition() {
  return getRuleContexts<ALFAParser::PolicysetDefinitionContext>();
}

ALFAParser::PolicysetDefinitionContext* ALFAParser::PolicysetDefinitionContext::policysetDefinition(size_t i) {
  return getRuleContext<ALFAParser::PolicysetDefinitionContext>(i);
}

std::vector<ALFAParser::PolicyDefinitionContext *> ALFAParser::PolicysetDefinitionContext::policyDefinition() {
  return getRuleContexts<ALFAParser::PolicyDefinitionContext>();
}

ALFAParser::PolicyDefinitionContext* ALFAParser::PolicysetDefinitionContext::policyDefinition(size_t i) {
  return getRuleContext<ALFAParser::PolicyDefinitionContext>(i);
}

std::vector<ALFAParser::RuleDefinitionContext *> ALFAParser::PolicysetDefinitionContext::ruleDefinition() {
  return getRuleContexts<ALFAParser::RuleDefinitionContext>();
}

ALFAParser::RuleDefinitionContext* ALFAParser::PolicysetDefinitionContext::ruleDefinition(size_t i) {
  return getRuleContext<ALFAParser::RuleDefinitionContext>(i);
}

std::vector<ALFAParser::ConditionDefinitionContext *> ALFAParser::PolicysetDefinitionContext::conditionDefinition() {
  return getRuleContexts<ALFAParser::ConditionDefinitionContext>();
}

ALFAParser::ConditionDefinitionContext* ALFAParser::PolicysetDefinitionContext::conditionDefinition(size_t i) {
  return getRuleContext<ALFAParser::ConditionDefinitionContext>(i);
}

std::vector<ALFAParser::TargetDefinitionContext *> ALFAParser::PolicysetDefinitionContext::targetDefinition() {
  return getRuleContexts<ALFAParser::TargetDefinitionContext>();
}
